<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.darwin.aigus.darwin.Activity.ActivityUser"
    tools:showIn="@layout/activity_user">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="7dp">

                <android.support.v7.widget.CardView style="@style/cardStyle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:layout_weight="1">
                            <TextView
                                android:text="@string/account"
                                style="@style/setTitleLittle" />
                            <TextView
                                android:text=""
                                android:id="@+id/userName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"/>
                            <TextView
                                android:text=""
                                android:id="@+id/userEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end">
                            <ImageButton
                                android:id="@+id/btnEditUser"
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_mode_edit_black_24dp"
                                android:background="@drawable/selector_btn_options"
                                tools:ignore="ContentDescription" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView android:id="@+id/cardLicense" style="@style/cardStyle">

                    <LinearLayout style="@style/contCardStyle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                        android:text="@string/license"
                        style="@style/setTitleLittle" />
                    <TextView
                        android:text="Salvar Amostras na Nuvem permite enviar as Amostras para sua conta cadastrada quando seu dispositivo estiver conectado à internet."
                        style="@style/setMessageLittle"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                        android:text="@string/license"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>
                    <TextView
                        android:text="@string/statusAtive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/colorAccent"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="Chave: "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"/>
                        <TextView
                            android:text="oifgtribrbr8598574874"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"/>
                    </LinearLayout>
                    <Button
                        android:text="@string/ativar"
                        android:id="@+id/btnAtive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_btn_green"
                        android:textColor="#ffffff"
                        android:layout_marginTop="8dp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView android:id="@+id/cardSett" style="@style/cardStyle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout style="@style/contCardStyle">
                            <TextView
                                android:text="@string/settingDarwin"
                                style="@style/setTitleLittle" />
                            <TextView
                                android:id="@+id/textView"
                                style="@style/setMessageLittle"
                                android:text="@string/enunSaveClound" />
                            <Switch
                                android:id="@+id/switch1"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:text="@string/saveOnClound" />
                        </LinearLayout>

                        <View style="@style/border"/>

                        <LinearLayout style="@style/contCardStyle">
                            <TextView
                                android:text="@string/enumAtiveNotif"
                                style="@style/setMessageLittle"/>
                            <Switch
                                android:id="@+id/switch2"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:text="@string/ativeNotifi" />
                        </LinearLayout>

                        <View style="@style/border"/>

                        <LinearLayout style="@style/contCardStyle">
                            <TextView
                                android:text="@string/eneumLog"
                                style="@style/setMessageLittle"
                                android:layout_marginTop="5dp"/>
                            <Switch
                                android:id="@+id/switch0"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:text="@string/perLog" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
