<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.darwin.aigus.darwin.ActivityForgotPass"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>
                <LinearLayout
                    android:id="@+id/contMenssage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:visibility="invisible">
                    <TextView
                        android:id="@+id/titleMensage"
                        android:text="Sucesso!"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                    <TextView
                        android:id="@+id/menssageAlert"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:gravity="center"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/alertError"
                android:text="@string/errorCampoBranco"
                style="@style/alertError"
                android:visibility="invisible"/>

            <TextView
                android:text="Insira um email para receber as redenciais de acesso."
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/fildEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/styleFilds" />

            <Button
                android:id="@+id/btnSand"
                style="@style/btnDarwinDark"
                android:layout_marginTop="10dp"
                android:text="@string/sand" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
